syntax = "proto3";

package helloworld;

option go_package = "/helloworld";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

service Farewell {
  rpc SayGoodbye (GoodbyeRequest) returns (GoodbyeReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message GoodbyeRequest {
  string name = 1;
}

message GoodbyeReply {
  string message = 1;
}

//protoc --go_out=. --go-grpc_out=. helloworld.proto
